tests/dockerfile/graph_builder/checks/resources/RunUnsafeCurl/fail/Dockerfile.multiline
FROM alpine:3.5
RUN curl \
    --insecure \
    https://example.com
